ansible/roles/deploy/files/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
  labels:
    app: nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: its-task
        image: 437190670490.dkr.ecr.eu-central-1.amazonaws.com/its-task:latest
        ports:
        - containerPort: 3000
          name: dep-port
