ansible/roles/deploy/files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-ser
spec:
  selector:
    app: nodejs
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: dep-port
  type: NodePort
